# ChowKick

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  mac_builds.sh  validate.sh  win_builds.sh
.github/: FUNDING.yml  labeler.yml
.github/workflows/: auto-format.yml  clang-tidy.yml  cmake.yml  ios.yml  manual.yml
installers/mac/: ChowKick.pkgproj  Intro.txt  build_mac_installer.sh
installers/windows/: ChowKick_Install_Script.iss  ChowKick_Install_Script_32bit.iss  build_win_installer.sh
manual/: ChowKickManual.tex  Makefile  manual.cls
modules/: CMakeLists.txt
modules/cmake/: CreateZip.cmake  WarningFlags.cmake
modules/oddsound-mts/: CMakeLists.txt
res/: CMakeLists.txt  gui.xml  gui_ios.xml
res/presets/: Bouncy.chowpreset  Default.chowpreset  Tight.chowpreset  Tonal.chowpreset  Wonky_Synth.chowpreset
res/tuning_library/: Documentation.txt
scripts/: ios_build.sh  mac_builds.sh
sim/: reso_filter.py
src/: CMakeLists.txt  ChowKick.cpp  ChowKick.h  VersionHints.h  pch.h
src/dsp/: Noise.cpp  Noise.h  OutputFilter.cpp  OutputFilter.h  PulseShaper.cpp  PulseShaper.h  ResonantFilter.cpp  ResonantFilter.h  ResonantFilterProcs.h  Trigger.cpp  Trigger.h
src/gui/: CustomLNFs.h  DisabledSlider.cpp  DisabledSlider.h  FilterViewHelper.h  FilterViewer.cpp  FilterViewer.h  ModulatableSlider.cpp  ModulatableSlider.h  PulseViewer.cpp  PulseViewer.h  SettingsButton.cpp  SettingsButton.h  TipJar.cpp  TuningMenu.cpp  TuningMenu.h
src/headless/: CMakeLists.txt  ScreenshotGenerator.cpp  main.cpp
src/presets/: PresetComp.cpp  PresetComp.h  PresetManager.cpp  PresetManager.h
